--- a/main.css
+++ b/main.css
@@ -1,13 +1,15 @@
 header, main, footer {
     margin-left: auto;
     margin-right: auto;
+    width: 600px;
 }
 
 header {
-    background: blueviolet;
-    width: 600px;
+    margin-top: 30px;
     height: 250px;
     border-radius: 20px;
+    background: blue;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,4 +20,33 @@ header img {
     border-radius: 5px;
     margin-right: 20px;
     width: 170px;
+}
+
+main h2 {
+    padding-bottom: 20px;
+    border-bottom: 0.5px solid black;
+    font-size: 35px;
+}
+
+main ul {
+    margin-top: -15px;
+}
+
+main ul li {
+    margin-bottom: 7px;
+}
+
+footer {
+    height: 125px;
+    border-radius: 20px;
+
+    background-color: blue;
+    color: white;
+
+    font-size: 17px;
+    text-align: center;
+}
+
+#info {
+    padding-top: 30px;
 }
