--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ header {
     margin-top: 30px;
     height: 250px;
     border-radius: 20px;
-    background: blue;
+    background: rgb(35, 174, 221);
 
     display: flex;
     justify-content: center;
@@ -40,7 +40,7 @@ footer {
     height: 125px;
     border-radius: 20px;
 
-    background-color: blue;
+    background-color: rgb(35, 174, 221);
     color: white;
 
     font-size: 17px;
