--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -1,9 +1,24 @@
 @media (min-width: 1000px) {
+    .principles {
+        width: 200px;
+    }
+
     main {
         display: flex;
         justify-content: space-around;
     }
+
+    #principle1 {
+        margin-right: 30px;
+        width: 280px;
+    }
+
     #principle2 {
-        margin-right: 20px
+        margin-right: 30px;
+        width: 280px;
+    }
+
+    #principle3 {
+        width: 280px;
     }
 }
