--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -5,6 +5,10 @@
     }
 
     #principle1 {
+        width: 50%;
         margin-right: 20px;
+    }
+    #principle2 {
+        width: 50%;
     }
 }
