--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -1,5 +1,5 @@
 @charset "UTF-8"; /* not necessary */
-/* bluegrey matter   #637f80 light  #536872  #708090  #536878  #36454f dark */
+
 * {
 	margin: 0;
 	padding: 0;
@@ -45,7 +45,7 @@ nav div {
 
 nav a {
 	display: block;
-	color: #fff;
+	color: black;
 	text-align: center;
 	padding: 15px;
 	text-decoration: none;
@@ -53,8 +53,8 @@ nav a {
 }
 
 nav a:hover {
-	background-color: #708080;
-	color: yellow;
+	background-color: #254e73;
+	color: white;
 }
 
 footer {
