--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -17,4 +17,12 @@
         border-right: 1px solid rgba(0,0,0,0.3);
         padding: .5rem 1rem;
     }
+
+    #facebook, #twitter {
+        margin-right: 5%;
+    }
+
+    #facebook {
+        margin-right: calc(5% + 55px);
+    }
 }
