--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -34,7 +34,18 @@
     /* Main */
     main {
         display: grid;
-        grid-row: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 2fr 1fr;
+        grid-column-gap: 10px;
+    }
+
+    #call {
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+
+    #news {
+        grid-row: 2/3;
+        grid-column: 1/3;
     }
 
     #spotlights {
@@ -43,6 +54,7 @@
         height: 235px;
         background: lightgray;
         border: black 1px solid;
+        grid-column: 1/3;
     }
 
     #spotlight1 {
@@ -55,5 +67,21 @@
         float: right;
         width: 42%;
         height: 90%;
+    }
+
+    #join {
+        display: block;
+        grid-row: 4/5;
+        grid-column: 1/3;
+    }
+
+    #event {
+        grid-row: 5/6;
+        grid-column: 1/2;
+    }
+
+    #weather {
+        grid-row: 5/6;
+        grid-column: 2/3;
     }
 }
