--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -120,6 +120,10 @@ main div {
     margin-right: 20px;
 }
 
+#spotlight3 {
+    display: none;
+}
+
 #spotlights {
     background: white;
     border: none;
