--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,4 +1,5 @@
 @media only screen and (min-width: 64rem) {
+    /* Header */
     nav button{display: none;}
     nav {
         float: left;
@@ -24,5 +25,63 @@
 
     #facebook {
         margin-right: calc(5% + 55px);
+    }
+
+    /* Main */
+    main div {
+        margin: 0;
+    }
+    
+    #spotlight1, #spotlight2, #spotlight3 {
+        display: block;
+        clear: both;
+        width: 90%;
+        height: 170px;
+        margin: 10px;
+    }
+
+    main {
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-gap: 10px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    #event {
+        grid-row: 1/2;
+        grid-column: 1/2;
+        height: 175px;
+    }
+
+    #weather {
+        grid-row: 2/3;
+        grid-column: 1/2;
+        height: 175px;
+    }
+
+    #join {
+        grid-row: 3/4;
+        grid-column: 1/2;
+        height: 175px;
+    }
+
+    #call {
+        grid-row: 1/3;
+        grid-column: 2/3;
+        height: 100%;
+    }
+
+    #news {
+        grid-row: 3/4;
+        grid-column: 2/3;
+        height: 175px;
+    }
+
+    #spotlights {
+        grid-row: 1/4;
+        grid-column: 3/4;
+        height: calc(100% - 4px);
     }
 }
