--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -49,24 +49,29 @@
     }
 
     #spotlights {
-        margin-top: 10px;
-        grid-row: 3/4;
-        height: 235px;
         background: lightgray;
         border: black 1px solid;
-        grid-column: 1/3;
     }
 
-    #spotlight1 {
-        float: left;
-        width: 42%;
-        height: 90%;
-    }
+    @media only screen and (max-width: 1023px) {
+        #spotlights {
+            margin-top: 10px;
+            grid-row: 3/4;
+            height: 235px;
+            grid-column: 1/3;
+        }
+    
+        #spotlight1 {
+            float: left;
+            width: 42%;
+            height: 90%;
+        }
 
-    #spotlight2 {
-        float: right;
-        width: 42%;
-        height: 90%;
+        #spotlight2 {
+            float: right;
+            width: 42%;
+            height: 90%;
+        }
     }
 
     #join {
