--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -91,4 +91,62 @@
     }
 
     /* Footer */
+    footer {
+        margin-top: 10px;
+    }
+
+    footer #main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+    }
+
+    #icon, #title, #address {
+        grid-row: 1/2;
+        grid-column: 1/2;
+    }
+
+    footer #icon {
+        margin-top: 15px;
+        margin-left: 5px;
+    }
+
+    #title {
+        margin-right: -65px;
+        margin-top: 50px;
+    }
+
+    #address {
+        margin-right: -65px;
+        margin-top: 75px;
+    }
+
+    #email, #phone, #map {
+        grid-row: 1/2;
+        grid-column: 2/3;
+        text-align: center;
+    }
+
+    #email {
+        margin-top: 50px;
+    }
+
+    #phone {
+        margin-top: 75px;
+    }
+
+    #map {
+        margin-top: 100px;
+    }
+
+    footer #base {
+        margin-top: 20px;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    footer #lastUpdated {
+        grid-column: 1/4;
+    }
 }
