--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -12,7 +12,7 @@ header {
     padding-bottom: 10px;
 }
 
-header #icon, h1, h2, #date {
+header .icon, h1, h2, #date {
     margin-left: 20px;
 }
 
@@ -20,7 +20,7 @@ header #hamburgerBtn, #date {
     margin-right: 5%;
 }
 
-header #icon {
+header .icon {
     width: 40px;
     float: left;
     margin-right: 20px;
@@ -137,7 +137,7 @@ footer {
     text-align: center;
 }
 
-footer #icon {
+footer .icon {
     width: 100px;
     margin-top: 20px;
 }
