--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -67,7 +67,7 @@ nav ul li a:hover {
     background-color: rgba(0,0,0,0.3);
 }
 
-nav ul li.active a {
+nav ul li a.active {
     background-color: rgba(0,0,0,0.2);
     color: #fff;
 }
@@ -103,6 +103,18 @@ nav ul.open {display: block;}
 }
 
 /* Main */
+#banner {
+    display: none;
+    background: #87cefa;
+    text-align: center;
+    height: auto;
+    border: #0B0B45 3px solid;
+    margin: auto;
+    margin-top: 10px;
+    max-width: 600px;
+}
+
+
 main div {
     height: 100px;
     background: lightgray;
