--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -95,7 +95,7 @@
         height: calc(100% - 4px);
     }
 
-    /* Large */
+    /* Footer */
     footer #base {
         grid-template-rows: 1fr;
         grid-template-columns: 1fr 1fr 1fr 1fr;
