--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -46,6 +46,7 @@
     #news {
         grid-row: 2/3;
         grid-column: 1/3;
+        height: 140px;
     }
 
     #spotlights {
@@ -57,7 +58,7 @@
         #spotlights {
             margin-top: 10px;
             grid-row: 3/4;
-            height: 235px;
+            height: 310px;
             grid-column: 1/3;
         }
     
@@ -78,11 +79,26 @@
         display: block;
         grid-row: 4/5;
         grid-column: 1/3;
+        height: auto;
+    }
+
+    #join h3 {
+        width: 80%;
+        background: yellow;
+        color: black;
+        margin: 20px auto;
+        padding: 10px;
+        border-radius: 15px;
+        border: black 1px solid;
     }
 
     #event {
         grid-row: 5/6;
         grid-column: 1/2;
+    }
+
+    #event img {
+        margin-top: 10px;
     }
 
     #weather {
