--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 1370px) {
     /* Header */
     nav button{display: none;}
     nav {
@@ -62,37 +62,63 @@
     #event {
         grid-row: 1/2;
         grid-column: 1/2;
-        height: 175px;
+        height: 100%;
     }
 
     #weather {
         grid-row: 2/3;
         grid-column: 1/2;
-        height: 175px;
+        height: 100%;
+        grid-template-rows: 70px 70px 130px;
+    }
+
+    #conditions {
+        margin-top: 50px;
+        font-size: large;
+    }
+
+    #weather div {
+        margin-top: 80px;
+        grid-row: 3/4;
     }
 
     #join {
+        padding-top: 15px;
         grid-row: 3/4;
         grid-column: 1/2;
-        height: 175px;
+        height: calc(100% - 15px);
     }
 
     #call {
         grid-row: 1/3;
         grid-column: 2/3;
-        height: 100%;
     }
 
     #news {
+        padding-top: 10px;
         grid-row: 3/4;
         grid-column: 2/3;
-        height: 175px;
+        height: 100%;
+        height: calc(100% - 10px);
     }
 
     #spotlights {
         grid-row: 1/4;
         grid-column: 3/4;
-        height: calc(100% - 4px);
+        height: 100%;
+    }
+
+    #spotlights div {
+        height: 250px;
+        width: calc(100% - 25px);
+    }
+
+    #spotlights div img {
+        height: 120px;
+    }
+
+    #spotlights div p {
+        font-size: small;
     }
 
     /* Footer */
