--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -64,7 +64,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: rgba(0,0,0,0.3);
+    background-color: #09095e;
 }
 
 nav ul li a.active {
