Added more html content and formatting for it.

--- a/chamber/discover/css/medium.css
+++ b/chamber/discover/css/medium.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 40rem) {
-    #days {
+    /* #daysSince {
         max-width: 400px;
-    }
+    } */
 
     main div {
         max-width: 640px;
