--- a/chamber/discover/css/base.css
+++ b/chamber/discover/css/base.css
@@ -1,13 +1,10 @@
-main {
-    text-align: center;
+main h1 {
+    margin: 15px auto 0 auto;
+    width: fit-content;
 }
 
-#days {
-    padding: 7px 15px 7px 15px;
-    background: #87cefa;
-    border-radius: 10px;
-    border: 1px black solid;
-    margin: 10px auto 10px auto;
+main h3 {
+    text-align: center;
 }
 
 main img {
