--- a/chamber/discover/css/base.css
+++ b/chamber/discover/css/base.css
@@ -7,6 +7,12 @@ main h3 {
     text-align: center;
 }
 
+main ul {
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+}
+
 main img {
     width: 100%;
 }
