--- a/lesson8/css/base.css
+++ b/lesson8/css/base.css
@@ -1,5 +1,7 @@
 main {
     width: 250px;
+    margin: auto auto auto auto;
+    vertical-align: middle;
     box-shadow: 20px;
     font-family: ubuntu, sans-serif;
     box-shadow: 7px 5px 7px rgb(173, 174, 230);
@@ -21,7 +23,7 @@ table {
     border-collapse: collapse;
 }
 
-#header {
+thead tr th {
     background: #628ca6;
     color: white;
 }
@@ -45,14 +47,14 @@ th, td {
     color: white;
 }
 
-main p {
+tfoot tr td {
     background: #7fb9c2;
-    margin-top: 0;
+    /* margin-top: 0; */
     font-size: 10px;
     text-align: center;
-    justify-self: center;
+    /* justify-self: center; */
     height: fit-content;
     padding: 6px 0 7px;
-    border: 1px solid #c8cbca;
-    border-top: none;
+    /* border: 1px solid #c8cbca; */
+    /* border-top: none; */
 }
