Moved thankyou page to outside join and changed it's formatting.

--- a/chamber/thankyou/css/base.css
+++ b/chamber/thankyou/css/base.css
@@ -1,8 +1,12 @@
+body {
+    height: 100%;
+}
+
 main {
     text-align: center;
     vertical-align: middle;
     align-items: center;
-    overflow: hidden;
+    height: auto;
 }
 
 main h2 {
