--- a/chamber/join/css/large.css
+++ b/chamber/join/css/large.css
@@ -1,5 +1,36 @@
 @media only screen and (min-width: 64rem) {
     form label.sbs {
         padding: .4rem 0;
-    }  
+    }
+
+    form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr fit-content;
+    }
+
+    #info {
+        width: 600px;
+        display: inline;
+        height: 654px;
+        grid-row: 1/2;
+        grid-column: 1/2;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #membership {
+        width: 600px;
+        display: inline;
+        grid-row: 1/2;
+        grid-column: 2/3;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #description {
+        grid-column: 1/3;
+        grid-row: 2/3;
+        height: fit-content;
+    }
 }
