--- a/chamber/join/css/base.css
+++ b/chamber/join/css/base.css
@@ -84,20 +84,20 @@ form input.submitBtn {
     border: 3px solid purple !important;
 }
 
-#np[type="radio"]:checked+label #h3 {
+#np[type="radio"]:checked+label .h3 {
     background: purple;
     color: white;
 }
 
-#bronze[type="radio"]:checked+label #h3 {
+#bronze[type="radio"]:checked+label .h3 {
     background: #CD7F32;
 }
 
-#silver[type="radio"]:checked+label #h3 {
+#silver[type="radio"]:checked+label .h3 {
     background: #C0C0C0;
 }
 
-#gold[type="radio"]:checked+label #h3 {
+#gold[type="radio"]:checked+label .h3 {
     background: #FFD700;
 }
 
@@ -114,7 +114,7 @@ form input.submitBtn {
     margin-top: 10px;
 }
 
-#membership label #h3 {
+#membership label .h3 {
     background: white;
     width: fit-content;
     margin: 15px auto 0 auto;
@@ -125,7 +125,7 @@ form input.submitBtn {
     display: block;
 }
 
-#membership label #h4 {
+#membership label .h4 {
     font-size: 20px;
     color: black;
     margin: 10px;
