--- a/chamber/join/css/large.css
+++ b/chamber/join/css/large.css
@@ -6,7 +6,7 @@
     form {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr fit-content;
+        grid-template-rows: 1fr;
     }
 
     #info {
