--- a/chamber/join/css/base.css
+++ b/chamber/join/css/base.css
@@ -142,6 +142,12 @@ form input.submitBtn {
     text-align: center;
 }
 
+#description label {
+    display: block;
+    margin-top: 20px;
+    font-size: 12pt;
+}
+
 #description textarea {
     min-width: 90%;
     min-height: 150px;
