Fixed form formatting.

--- a/chamber/join/css/medium.css
+++ b/chamber/join/css/medium.css
@@ -18,4 +18,10 @@
     #membership label {
         margin-right: 20px;
     }
+
+    #info label {
+        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
