--- a/chamber/join/css/large.css
+++ b/chamber/join/css/large.css
@@ -1,36 +1,73 @@
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 1024px) {
     form label.sbs {
         padding: .4rem 0;
     }
 
     form {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 400px 600px 1fr;
+        grid-template-rows: 1fr 400px 50px;
     }
 
     #info {
-        width: 600px;
+        width: 330px;
         display: inline;
         height: 654px;
         grid-row: 1/2;
-        grid-column: 1/2;
+        grid-column: 2/3;
         margin-left: auto;
-        margin-right: auto;
+        margin-right: 10px;
     }
 
     #membership {
-        width: 600px;
+        width: 570px;
         display: inline;
+        padding: 0 0 0 20px;
         grid-row: 1/2;
-        grid-column: 2/3;
-        margin-left: auto;
+        grid-column: 3/4;
+        margin-left: 10px;
         margin-right: auto;
     }
 
+    .space {
+        display: block;
+        width: 0px;
+        height: 0px;
+    }
+
     #description {
-        grid-column: 1/3;
+        grid-column: 1/5;
         grid-row: 2/3;
         height: fit-content;
+    }
+
+    #buttonwrap {
+        grid-column: 2/5;
+        grid-row: 3/4;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    form {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #info {
+        grid-column: 1/2;
+        width: 553px;
+        vertical-align: middle;
+    }
+
+    #membership {
+        grid-column: 2/3;
+        width: 560px;
+    }
+
+    #buttonwrap {
+        grid-column: 1/3;
+    }
+
+    #center {
+        margin-top: 60px;
     }
 }
