--- a/lesson9/css/base.css
+++ b/lesson9/css/base.css
@@ -3,13 +3,18 @@ h1 {
     color: purple;
 }
 
+@media only screen and (min-width: 40rem) {
+    .cards {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
+
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(500px, 1fr));
     grid-gap: 5px;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
 .cards section {
@@ -17,6 +22,10 @@ h1 {
     text-align: center;
     padding-bottom: 7px;
     border: 1px solid black;
+}
+
+.cards img {
+    max-width: 90%;
 }
 
 .cards section h2 {
