--- a/chamber/directory/css/medium.css
+++ b/chamber/directory/css/medium.css
@@ -3,7 +3,7 @@
         margin: 0 20px 20px 20px;
     }
 
-    article.list h2 {
-        padding-top: 50px;
+    article.list section {
+        grid-template-columns: 100px 1fr;
     }
 }
