--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -44,45 +44,28 @@ main div {
 
 #weather {
     text-align: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 70px 70px 30px 100px;
-}
-
-#weather h3 {
-    font-size: x-large;
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-
-#temp {
-    font-size: xx-large;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-right: auto;
-    margin-left: 10px;
-    margin-top: 20px;
-}
-
-#conditions {
-    grid-column: 2/3;
-    grid-row: 3/4;
-}
-
-#weather img {
-    width: 70px;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    margin-left: auto;
-    margin-right: 10px;
+    position: relative;
 }
 
 #weather div {
     border: none;
-    border-top: black solid 1px;
-    grid-column: 1/3;
-    grid-row: 4/5;
-    height: auto;
+    height: fit-content;
+    margin: 0 !important;
+}
+
+#weather #temp {
+    padding-bottom: 30px;
+}
+
+#weather h4 {
+    font-size: 14pt;
+}
+
+#weather #wind {
+    border-top: 2px solid black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 #news {
