--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -27,6 +27,10 @@
         height: 100%;
     }
 
+    #event figure {
+        margin: 30px 40px 0 40px;
+    }
+
     #weather {
         grid-row: 2/3;
         grid-column: 1/2;
@@ -49,6 +53,10 @@
         grid-row: 3/4;
         grid-column: 1/2;
         height: calc(100% - 15px);
+    }
+
+    #join h3 {
+        margin-top: 5%;
     }
 
     #call {
