--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -13,12 +13,13 @@
     }
 
     main {
-        margin-top: 10px;
         display: grid;
         grid-template-columns: 1fr 2fr 1fr;
         grid-gap: 10px;
-        margin-left: 30px;
-        margin-right: 30px;
+        padding-left: 30px;
+        padding-right: 30px;
+        max-width: 2000px;
+        margin: 10px auto 0 auto;
     }
 
     #event {
@@ -62,6 +63,11 @@
     #call {
         grid-row: 1/3;
         grid-column: 2/3;
+    }
+
+    #call img {
+        height: 100%;
+        object-fit: cover;
     }
 
     #news {
