--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -66,8 +66,9 @@
     }
 
     #call img {
-        height: 100%;
-        object-fit: cover;
+        width: 100%;
+        max-height: 650px;
+        object-fit: cover !important;
     }
 
     #news {
