--- a/chamber/css/all_full.css
+++ b/chamber/css/all_full.css
@@ -93,11 +93,21 @@ nav ul li a.active {
 nav ul {display: none}
 nav ul.open {display: block;}
 
+#hamburgerBtn {
+    cursor: pointer;
+}
+
 #hamburgerBtn span:nth-child(1) {display: block;}
 #hamburgerBtn span:nth-child(2) {display: none;}
 
 #hamburgerBtn.open span:nth-child(1) {display: none;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
+
+@media only screen and (max-width: 1369px) {
+    nav ul li a:hover {
+        color: white;
+    }
+}
 
 #facebook, #twitter {
     width: 25px;
