--- a/chamber/css/all_full.css
+++ b/chamber/css/all_full.css
@@ -205,11 +205,13 @@ footer #base {
     footer #iconlink {
         margin-top: 15px;
         margin-left: 5px;
-        width: 90px;
+        width: 100px;
+        height: 116.8px;
+        z-index: 10;
     }
 
     footer .icon {
-        width: 90px;
+        width: 100px;
         margin-top: 0;
     }
 
