--- a/chamber/css/all_full.css
+++ b/chamber/css/all_full.css
@@ -293,13 +293,11 @@ footer #base {
     nav ul li.active a {
         background: #0B0B45
     }
-
-    #facebook, #twitter {
-        margin-right: 5%;
-    }
-
     #facebook {
-        margin-right: calc(5% + 55px);
+        margin-right: 55px;
+    }
+    #twitter {
+        margin-right: 0;
     }
 
     /* Large Footer */
@@ -316,4 +314,28 @@ footer #base {
     footer #lastUpdated {
         grid-column: 4/5;
     }
+}
+
+/* Scrollbar */
+body::-webkit-scrollbar-thumb {
+    background-color: #0b0b45;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #87cefa;
+}
+
+body::-webkit-scrollbar-corner {
+    background-color: #87cefa;
+}
+
+body::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+}
+
+body {
+    -ms-overflow-style: auto;
+    scrollbar-color: #0b0b45 #87cefa;
+    scrollbar-width: thin;
 }
