--- a/temple/css/all.css
+++ b/temple/css/all.css
@@ -220,31 +220,10 @@ footer #services {
         margin-top: -50px;
     }
 
-    footer a#iconlink {
-        margin-left: 5px;
-        width: 100px;
-        height: 100px;
-        z-index: 10;
-    }
-
+    /* Medium Footer */
     footer .icon {
         width: 100px;
         margin-bottom: -130px;
-    }
-
-    @media only screen and (max-width: 750px) {
-        footer #iconlink {
-            grid-row: 1/2;
-            grid-column: 1/3;
-            margin: 20px auto 0 auto;
-        }
-    }
-}
-
-/* Footer icon */
-@media only screen and (min-width: 950px) {
-    footer #iconlink {
-        margin-left: calc((100vw - 950px) / 5);
     }
 }
 
@@ -337,7 +316,7 @@ footer #services {
     }
 
     /* Large Footer */
-    footer .icon, #iconlink {
+    footer .icon {
         width: 100px !important;
     }
 }
