--- a/temple/home/css/base.css
+++ b/temple/home/css/base.css
@@ -1,1 +1,92 @@
 /* Small Main */
+main #bannerimg {
+    width: 100%;
+    height: 250px;
+    margin-bottom: 10px;
+}
+
+/* All divs */
+main section h2 {
+    margin-top: 9px;
+    font-size: 22px;
+}
+
+main section {
+    margin: 0 auto 10px auto;
+    border: 1px solid black;
+    text-align: center;
+}
+
+/* Temple description */
+main #temple {
+    width: 95%;
+    max-width: 350px;
+    padding: 0 5px 0 5px;
+}
+
+/* Weather */
+main #weather {
+    width: 250px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+main #weather h2 {
+    grid-column: 1/3;
+}
+
+main #weather h3 {
+    display: inline;
+    margin: 25px -5px;
+    width: 100%;
+    text-align: right;
+}
+
+main #weather img {
+    display: inline;
+    margin-left: 5px;
+}
+
+main #weather div {
+    border-top: 1px solid black;
+    width: 100%;
+    margin-top: 20px;
+    padding: 9px 0 9px;
+    grid-column: 1/3;
+}
+
+main #weather div span {
+    display: block;
+}
+
+/* Forecast */
+main #forecast {
+    width: 95%;
+    max-width: 600px;
+    display: grid;
+    padding: 0 10px 10px 0;
+}
+
+main #forecast h2 {
+    grid-column: 1/3;
+}
+
+main #forecast div {
+    min-width: 150px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+main #forecast div h2 {
+    font-size: 18px;
+    grid-column: 1/3;
+}
+
+main #forecast div h3 {
+    text-align: right;
+    margin-right: 10px;
+}
+
+main #forecast #threedays {
+    grid-column: 1/3;
+}
