--- a/temple/home/css/medium.css
+++ b/temple/home/css/medium.css
@@ -1,1 +1,14 @@
 /* Medium Main */
+@media only screen and (min-width: 640px) {
+    /* Medium Forecast */
+    main #forecast {
+        padding-bottom: 20px;
+    }
+    main #forecast h2 {
+        grid-column: 1/4;
+    }
+
+    main #forecast #threedays {
+        grid-column: 3/4;
+    }
+}
