--- a/temple/home/css/base.css
+++ b/temple/home/css/base.css
@@ -1,7 +1,6 @@
 /* Small Main */
 main #bannerimg {
     width: 100%;
-    height: 250px;
     margin-bottom: 10px;
 }
 
@@ -22,6 +21,10 @@ main #temple {
     width: 95%;
     max-width: 350px;
     padding: 0 5px 0 5px;
+}
+
+main #temple img {
+    width: 150px;
 }
 
 /* Weather */
@@ -69,6 +72,7 @@ main #forecast {
 
 main #forecast h2 {
     grid-column: 1/3;
+    margin-bottom: 0;
 }
 
 main #forecast div {
@@ -84,6 +88,7 @@ main #forecast div h2 {
 
 main #forecast div h3 {
     text-align: right;
+    margin-top: 25px;
     margin-right: 10px;
 }
 
