--- a/temple/temples/css/base.css
+++ b/temple/temples/css/base.css
@@ -1,1 +1,24 @@
 /* Small Main */
+main section {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+main section h2 {
+    text-align: center;
+}
+
+main section h3 {
+    margin-left: 10px;
+}
+
+main section img {
+    width: 90%;
+    max-width: 300px;
+}
+
+main section ul {
+    text-align: left;
+}
