--- a/temple/temples/css/large.css
+++ b/temple/temples/css/large.css
@@ -1,1 +1,20 @@
 /* Large Main */
+@media only screen and (min-width: 1024px) {
+    main {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+        grid-gap: 10px;
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+    }
+
+    main section {
+        width: 100%;
+    }
+
+    @media only screen and (max-width: 2040px) {
+        main section:nth-of-type(4) {
+            grid-column: 2/3;
+        }
+    }
+}
