--- a/temple/temples/css/medium.css
+++ b/temple/temples/css/medium.css
@@ -1,1 +1,12 @@
 /* Medium Main */
+@media only screen and (min-width: 640px) {
+    main section {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    main section h2, main section img {
+        grid-column: 1/3;
+        margin: 10px auto 0 auto;
+    }
+}
