--- a/temple/reservations/css/base.css
+++ b/temple/reservations/css/base.css
@@ -1,1 +1,83 @@
 /* Small Main */
+/* Input Validation */
+fieldset label input:required {
+    border-left: red solid 6px;
+    padding-left: 12px !important;
+}
+
+fieldset label input:required:valid {
+    border-left: green solid 6px;
+    padding-left: 12px !important;
+}
+
+fieldset label input {
+    padding-left: 18px !important;
+}
+
+/* All */
+.nomargin {
+    margin: 0;
+}
+
+main form fieldset {
+    width: 90%;
+    border-radius: 10px;
+    margin: 0 auto 10px auto;
+}
+
+main form legend {
+    text-align: center;
+}
+
+main form h4 {
+    margin-bottom: 5px;
+}
+
+main form label {
+    display: block;
+    margin-top: 10px;
+}
+
+main form label, main form input, main form select {
+    width: 225px;
+    padding: 6px 0 6px 8px;
+    border-radius: 5px;
+}
+
+/* Form Reservation Information */
+main form input[type="checkbox"] {
+    width: fit-content;
+}
+
+/* Form Comments */
+main form #comments label {
+    padding: 0;
+    width: fit-content;
+    margin: 0 auto 0 auto;
+}
+
+main form #comments textarea {
+    min-width: 280px;
+    max-width: 280px;
+    min-height: 100px;
+    margin: 0 auto 0 auto;
+    padding: 0;
+}
+
+/* Button */
+main form #buttonwrap {
+    width: fit-content;
+    margin: 0;
+    margin: 10px auto 0 auto;
+    grid-column: 1/3;
+}
+
+main form input.submitBtn {
+    border: none;
+    background: #87cefa;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    max-width: 15rem;
+    cursor: pointer;
+}
