--- a/temple/reservations/css/medium.css
+++ b/temple/reservations/css/medium.css
@@ -1,1 +1,37 @@
 /* Medium Main */
+@media only screen and (min-width: 640px) {
+    main form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    main form #info {
+        grid-column: 1/2;
+        width: 90%;
+        margin: 0 auto 0 auto;
+    }
+
+    main form #reservation {
+        grid-column: 2/3;
+        width: 90%;
+        margin: 0 auto 0 auto;
+    }
+
+    main form #comments {
+        grid-column: 1/3;
+        width: 95%;
+        margin: 0 auto 0 auto;
+    }
+
+    main form #comments label {
+        padding: 0;
+        width: 600px;
+        margin: 0 auto 0 auto;
+    }
+    
+    main form #comments textarea {
+        min-width: 100%;
+        max-width: 100%;
+        min-height: 200px;
+    }
+}
