--- a/temple/services/reception/css/base.css
+++ b/temple/services/reception/css/base.css
@@ -1,1 +1,15 @@
 /* Small Main */
+main {
+    text-align: center;
+}
+main h3, main p {
+    margin-left: 10px;
+    padding-right: 10px;
+}
+
+main img {
+    width: 50%;
+    min-width: 300px;
+    margin: 0 auto 0 auto;
+    text-align: center;
+}
