--- a/temple/css/all.css
+++ b/temple/css/all.css
@@ -195,9 +195,9 @@ footer #services {
     margin-top: 30px;
 }
 
-#copy {
-    padding: 7px 0 7px 0;
+footer #bottom {
     border-top: #87cefa 2px solid;
+    padding: 7px 0 7px 0;
 }
 
 @media only screen and (min-width: 440px) {
@@ -235,6 +235,11 @@ footer #services {
     footer .icon {
         width: 100px;
         margin-bottom: -130px;
+    }
+
+    footer #bottom p {
+        display: inline;
+        margin-right: 20px;
     }
 }
 
