--- a/temple/css/all.css
+++ b/temple/css/all.css
@@ -95,7 +95,7 @@ nav ul {
     padding-left: 0px;
 }
 
-nav ul li {
+nav ul .link {
     background: #87cefa;
     width: 100%;
 }
@@ -108,7 +108,7 @@ nav ul a {
     border-top: 1px solid rgba(0,0,0,0.5);
 }
 
-nav ul li a:hover {
+nav ul .link a:hover {
     background-color: #181891;
 }
 
@@ -135,7 +135,7 @@ nav ul.open {display: block; padding-top: 40px;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
 
 @media only screen and (max-width: 1023px) {
-    nav ul li a:hover {
+    nav ul .link a:hover {
         color: white;
     }
 }
@@ -269,11 +269,11 @@ footer #bottom {
         background: #0B0B45;
     }
 
-    nav ul li {
+    nav ul .link {
         width: fit-content;
     }
     
-    nav ul li a {
+    nav ul .link a, nav ul .forcelink {
         border: none;
         border-right: 1px solid rgba(0,0,0,0.3);
         padding: .5rem 1rem;
@@ -287,7 +287,7 @@ footer #bottom {
         color: black !important;
     }
 
-    nav ul li a:hover {
+    nav ul .link a:hover, nav ul .forcelink:hover {
         background-color: #87cefa;
         color: black;
     }
