--- a/temple/reservations/css/base.css
+++ b/temple/reservations/css/base.css
@@ -69,13 +69,12 @@ main form #buttonwrap {
     width: fit-content;
     margin: 0;
     margin: 10px auto 0 auto;
-    grid-column: 1/3;
 }
 
 main form input.submitBtn {
     border: none;
     background: #87cefa;
-    color: white;
+    color: black;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
     max-width: 15rem;
