--- a/temple/reservations/css/large.css
+++ b/temple/reservations/css/large.css
@@ -1,1 +1,7 @@
 /* Large Main */
+@media only screen and (min-width: 1024px) {
+    main form #comments {
+        text-align: center;
+        width: fit-content;
+    }
+}
