--- a/temple/reservations/css/medium.css
+++ b/temple/reservations/css/medium.css
@@ -3,6 +3,7 @@
     main form {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: 2fr 20px 1fr;
     }
 
     main form #info {
@@ -19,6 +20,7 @@
 
     main form #comments {
         grid-column: 1/3;
+        grid-row: 3/4;
         width: 95%;
         margin: 0 auto 0 auto;
     }
@@ -33,5 +35,11 @@
         min-width: 100%;
         max-width: 100%;
         min-height: 200px;
+        max-height: 200px;
+    }
+
+    main form #buttonwrap {
+        grid-column: 1/3;
+        grid-row: 4/5;
     }
 }
