--- a/temple/services/missionary/css/base.css
+++ b/temple/services/missionary/css/base.css
@@ -80,7 +80,7 @@ main form #buttonwrap {
 main form input.submitBtn {
     border: none;
     background: #87cefa;
-    color: white;
+    color: black;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
     max-width: 15rem;
