--- a/temple/home/css/base.css
+++ b/temple/home/css/base.css
@@ -18,8 +18,8 @@ main #call a {
     color: white;
     text-decoration: none;
     position: absolute;
-    bottom: 30px;
-    right: 20px;
+    top: 4%;
+    right: 2%;
 }
 
 /* All divs */
