--- a/temple/home/css/base.css
+++ b/temple/home/css/base.css
@@ -66,6 +66,7 @@ main #weather h3 {
 main #weather img {
     display: inline;
     margin-left: 5px;
+    margin-top: 10px;
 }
 
 main #weather div {
@@ -91,6 +92,10 @@ main #forecast {
 main #forecast h2 {
     grid-column: 1/3;
     margin-bottom: 0;
+}
+
+main #forecast img {
+    margin-top: 10px;
 }
 
 main #forecast div {
