--- a/temple/temples/css/medium.css
+++ b/temple/temples/css/medium.css
@@ -3,6 +3,13 @@
     main section {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: 30px;
+    }
+
+    main h2 {
+        grid-column: 1/3;
+        text-align: center;
+        margin: 0;
     }
 
     main section h2, main section img {
