--- a/temple/reservations/css/medium.css
+++ b/temple/reservations/css/medium.css
@@ -25,17 +25,16 @@
         margin: 0 auto 0 auto;
     }
 
-    main form #comments label {
-        padding: 0;
-        width: 600px;
+    main form #comments textarea {
+        min-width: 600px;
+        max-width: 600px;
+        min-height: 200px;
+        max-height: 200px;
         margin: 0 auto 0 auto;
     }
     
     main form #comments textarea {
-        min-width: 100%;
-        max-width: 100%;
-        min-height: 200px;
-        max-height: 200px;
+        
     }
 
     main form #buttonwrap {
