--- a/temple/temples/css/medium.css
+++ b/temple/temples/css/medium.css
@@ -6,13 +6,24 @@
         grid-template-rows: 30px;
     }
 
+    main section .likes {
+        float: right;
+        grid-column: 1/3;
+        margin-left: 90%;
+        margin-top: -20px;
+    }
+
     main h2 {
-        text-align: center;
         margin: 0;
+        grid-column: 1/3;
     }
 
     main section h3, main section img {
         grid-column: 1/3;
         margin: 10px auto 0 auto;
+    }
+
+    main section .likes {
+        grid-column: 2/3;
     }
 }
