--- a/temple/temples/css/base.css
+++ b/temple/temples/css/base.css
@@ -38,6 +38,7 @@ main section h4 {
 main section img {
     width: 90%;
     max-width: 300px;
+    margin-top: -10px !important;
 }
 
 main section ul {
