--- a/temple/css/all_full.css
+++ b/temple/css/all_full.css
@@ -33,6 +33,7 @@ footer {
     margin-top: 10px;
     width: fit-content;
     padding: 0 10px 0 10px;
+    position: relative;
 }
 
 .show {
@@ -40,11 +41,11 @@ footer {
 }
 
 #banner span {
-    float: right;
-    margin-top: -70px;
-    margin-right: -10px;
     font-size: larger;
     padding: 3px 8px 8px 12px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 #banner span:hover {
