--- a/temple/css/all_full.css
+++ b/temple/css/all_full.css
@@ -111,7 +111,7 @@ nav ul a {
     border-top: 1px solid rgba(0,0,0,0.5);
 }
 
-nav ul .link a:hover, nav ul .forcelink:hover {
+nav ul .link a:hover, nav ul .forcelink:hover, nav .dropdown-content a:hover {
     background-color: #181891;
 }
 
@@ -138,7 +138,7 @@ nav ul.open {display: block; padding-top: 40px;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
 
 @media only screen and (max-width: 1023px) {
-    nav ul .link a:hover {
+    nav ul .link a:hover, nav ul .forcelink:hover, .dropdown-content a:hover {
         color: white;
     }
 }
